fixed modal overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,6 +62,6 @@ table {
 	table-layout: fixed
 }
 
-.modal-body p {
+.modal-content {
 	word-wrap: break-word;
 }
